# Personal_Assistant

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
personal_assistant/: .gitignore  README.md  _env.example  docker-compose.yml  pyproject.toml
personal_assistant/config/: asgi.py  settings.py  urls.py
personal_assistant/contacts/: admin.py  forms.py  models.py  urls.py  views.py
personal_assistant/contacts/migrations/: 0001_initial.py  0002_contact_birthday.py  0002_contact_user.py  0003_contact_user.py  0004_remove_contact_user.py
personal_assistant/contacts/templates/contacts/: contact_create.html  contact_delete_confirm.html  contact_edit.html  contact_list.html
personal_assistant/files/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
personal_assistant/files/templates/files/: file_list.html  upload.html  (+1 more)
personal_assistant/notes/: admin.py  forms.py  models.py  urls.py  views.py
personal_assistant/notes/migrations/: 0003_alter_notes_created_at.py  0005_alter_notes_id.py
personal_assistant/notes/templates/: main.html
personal_assistant/personal_assistant/: asgi.py  settings.py  urls.py  wsgi.py
personal_assistant/static/css/: style.css
personal_assistant/staticfiles/css/: style.css
personal_assistant/users/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
personal_assistant/users/migrations/: 0002_customuser_avatar.py  0003_alter_customuser_avatar.py  0005_remove_customuser_avatar.py
personal_assistant/utils/: categorized_news.json
(+57 files in other folders)
