[tool.poetry]
name = "my_project"
version = "0.1.0"
description = ""
authors = ["Shtoma Denys <denys.shtoma@knu.ua>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
black = "^24.8.0"
requests = "^2.32.3"
django-environ = "^0.11.2"
dj-database-url = "^2.2.0"
psycopg2-binary = "2.9.9"
pillow = "^10.4.0"
beautifulsoup4 = "^4.12.3"
environ = "^1.0"
boto3 = "^1.35.10"
awscli = "^1.34.10"
django-storages = "^1.14.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
